--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,22 @@
         </nav>
     </header>
     <body>
+        <div class="gallery-item">
+            <div class="carousel-title">Portfolio <br>(click photo to enlarge)</div>
+        </div>
         <div class="carousel-container">
             <button class="prev" onclick="moveSlide(-1)">❮</button>
             <div class="carousel">
-                <img src="Rexy2.3.jpg" class="carousel-image" onclick="openModal(this.src)">
-                <img src="Rexy2.3.jpg" class="carousel-image" onclick="openModal(this.src)">
-                <img src="Rexy2.3.jpg" class="carousel-image" onclick="openModal(this.src)">
-                <img src="Rexy2.3.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Hurucan.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="M2cc.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Csl3.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Slant1.1.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Slant2.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Slant3.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Supra.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Gt4rs.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Mso4.jpg" class="carousel-image" onclick="openModal(this.src)">
+                <img src="Mso3 (1).jpg" class="carousel-image" onclick="openModal(this.src)">
             </div>
             <button class="next" onclick="moveSlide(1)">❯</button>
         </div>
