--- a/index.html
+++ b/index.html
@@ -26,4 +26,23 @@
     </header>
 
 </body>
+<body>
+    <div class="gallery-container">
+        <div class="gallery-title">Captura Top 3 Highlights of the Week</div>
+        <div class="gallery">
+            <div class="gallery-item">
+                <img src="IMG_1885.JPG" alt="Image 1">
+                <div class="description">Bmw M4 CSL "G82"</div>
+            </div>
+            <div class="gallery-item">
+                <img src="IMG_1883.JPG" alt="Image 2">
+                <div class="description">Porsche 911 Turbo "Slant Nose"</div>
+            </div>
+            <div class="gallery-item">
+                <img src="IMG_1884.JPG" alt="Image 3">
+                <div class="description">Bmw M2 "G87"</div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
